# RCI-clustering-metrics

./: MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
clustering_metrics/: __init__.py  cci.py  rci.py  visualizer.py
examples/: README.md  custom_data_example.py  iris_example.py
tests/: test_cci.py  test_rci.py
