[metadata]
name = clustering-metrics
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Implementation of CCI and RCI clustering evaluation metrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/clustering-metrics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.0
    pandas>=1.2.0
    matplotlib>=3.3.0
    seaborn>=0.11.0
    scikit-learn>=0.24.0 